--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "rechart": "^0.0.1",
     "recharts": "^2.3.2",
     "sass": "^1.57.1",
